# Magi-park

./: .gitignore  Magipark.pptx
Backend/: CMakeLists.txt  Json.h  main.cpp
Backend/Map/: KD-Tree.cpp  KD-Tree.h  Map.cpp  Map.h
Backend/Server/: Server.cpp  Server.h
Backend_Python/: restapi.py
Frontend/magipark/: package-lock.json  package.json
Frontend/magipark/public/: index.html
Frontend/magipark/src/: App.css  App.js
Frontend/magipark/src/components/: ChooseMapButton.js  LongTermMap.js  MapChooseButton.js  ShortTermMap.js  lengthSlider.js
Frontend/magipark/src/data/: ExampleRouteDTO.json
Frontend/magipark/src/utils/: ApiHandler.js  Geolocation.js
RobotaxiSim/: README.md  cache.txt  data.json  example.settings.ini  munichlist  taxisim.py  transcode_streets.py
